--- a/index.css
+++ b/index.css
@@ -94,6 +94,7 @@ body::-webkit-scrollbar {
     height: 100vh;
     width: 100%;
 }
+
 #cursor 
 {
     position: absolute;
@@ -106,6 +107,7 @@ body::-webkit-scrollbar {
     border-radius: 50%;
     pointer-events: none;
 }
+
 #divider 
 {
   padding:0;
@@ -115,7 +117,60 @@ body::-webkit-scrollbar {
   border-radius: 3px;
   background-color: var(--bg-secondary);
 }
-@media only screen and (max-width: 600px) {
+.heading
+{
+    margin-left: 2rem;
+    margin-top: 2rem;
+}
+.animate
+{
+    font-size: 3rem;
+    color: var(--text-primary);
+    font-weight: 1000;
+}
+@keyframes animate
+{
+    0% 
+    {
+        transform: translate(-50%,-50%) rotate(0deg);
+    }
+    100% 
+    {
+        transform: translate(-50%,-50%) rotate(360deg);
+    }
+}
+.home-box 
+{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    
+}
+.home-content
+{
+    width: 38%;
+    margin-left: 2rem;
+    display: flex;
+    flex-direction: column;
+    color: var(--text-primary);
+    font-size: 1.75rem;
+    font-weight: 700;
+    height: 25rem;
+    
+    justify-content: center;
+}
+.home-img
+{
+    width: 58%;
+    margin-left: 4%;
+   
+}
+.home-img img 
+{
+    width: 100%;
+    height: 25rem;
+}
+@media only screen and (max-width: 660px) {
     .navbar-nav {
         position: fixed;
         left: -100%;
@@ -160,14 +215,14 @@ body::-webkit-scrollbar {
     }
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 660px) {
     .navbar {
       top: 0;
       width: 7rem;
       height: 100vh;
     }
 }
-  
+
 .dark {
     --text-primary: #b6b6b6;
     --text-secondary: #ececec;
