--- a/index.css
+++ b/index.css
@@ -91,7 +91,7 @@ body::-webkit-scrollbar {
 }
 .container
 {
-    height: 100vh;
+    height:34rem;
     width: 100%;
 }
 
@@ -156,7 +156,6 @@ body::-webkit-scrollbar {
     font-size: 1.75rem;
     font-weight: 700;
     height: 25rem;
-    
     justify-content: center;
 }
 .home-img
@@ -169,6 +168,117 @@ body::-webkit-scrollbar {
 {
     width: 100%;
     height: 25rem;
+}
+.about-content 
+{
+    height: 28rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 2rem;
+    font-size: 1.75rem;
+    color: var(--text-primary);
+    font-weight: 700;
+}
+.project-content
+{
+    height: 28rem;
+    margin-left: 2rem;
+    color: var(--text-primary);
+    font-size: 1.5rem;
+
+}
+.project-list 
+{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 100%;
+    font-weight: 500;
+}
+.project-list li
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: bold;
+}
+.srno
+{
+    text-decoration: underline;
+    opacity: 0.5;
+}
+.list-head
+{
+    color: var(--bg-secondary);
+}
+.contact-content 
+{
+    color: var(--text-primary);
+    margin-left: 4rem;
+    font-size: 1.75rem;
+    font-weight: 700;
+    margin-top:2rem;
+}
+.contact-link
+{
+    margin-top: 10rem;
+    margin-bottom: 3rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.resume-link 
+{
+    text-decoration: none;
+    text-align: center;
+}
+.resume-link a
+{
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 1rem;
+    color: #000;
+    padding: 1rem;
+    background-color: #12F3E2;
+    border-radius: 2rem;
+}
+.footer 
+{
+    margin-top:5.5rem;
+    width: 100%;
+    bottom: 0;
+    height: 3rem;
+    background-color: var(--bg-secondary);
+    margin-right: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    color: var(--text-primary);
+}
+.footer span 
+{
+    padding-top: .75rem;
+}
+.footer a
+{
+   text-decoration: none;
+   color: rgb(255, 94, 0);
+}
+#logo
+{
+  fill: #12F3E2 ;
+  stroke-width: 3;
+}
+svg
+{
+  width: 4rem;
+  height: 4rem;
 }
 @media only screen and (max-width: 660px) {
     .navbar-nav {
