--- a/index.css
+++ b/index.css
@@ -280,6 +280,78 @@ svg
   width: 4rem;
   height: 4rem;
 }
+#skills
+{
+    height: 34rem;
+}
+.skill 
+{
+    margin-left: 2rem;
+    height: 8rem;
+    width: 100%;
+    color: var(--text-primary);
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    font-size: 1.75rem;
+    text-align: center;
+    font-weight: bold;
+}
+.list 
+{
+    height: 4rem;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-evenly;
+}
+.box 
+{
+   margin-top: 1rem;
+   margin-bottom: 1rem;
+   width: 15%;
+   height: 100%;
+   border: 1px solid #000;
+   border-radius: 30px;
+}
+.circle 
+{
+    height: 100%;
+    width:40%;
+    float: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.final 
+{
+    margin-left: 20%;
+    width: 70%;
+    height: 70%;
+    border-radius: 10rem;
+}
+#f3
+{
+    background-color: #12F3E2;
+}
+#f2
+{
+    background-color: rgb(255, 94, 0);
+}
+#f1 
+{
+    background-color: var(--bg-secondary);
+}
+.content 
+{
+    height: 100%;
+    width: 58%;
+    float: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 0.75rem;
+    color: #000;
+}
 @media only screen and (max-width: 660px) {
     .navbar-nav {
         position: fixed;
