--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
     --bg-primary: #23232e;
     --bg-secondary: #141418;
     font-family: 'Roboto Mono', monospace;
-}
+} 
 
 body {
     color: black;
@@ -21,6 +21,7 @@ body::-webkit-scrollbar {
 .main {
     margin-left: 7rem;
     padding: 1rem;
+    padding-bottom: 0;
 }
 .navbar {
     position: fixed;
@@ -59,6 +60,10 @@ body::-webkit-scrollbar {
 .nav-link:hover {
     background: var(--bg-primary);
     color: var(--text-secondary);
+    
+}
+.nav-link:focus{
+    background-color: var(--bg-primary);
 }
   
 .link-text {
@@ -88,9 +93,9 @@ body::-webkit-scrollbar {
 #cursor 
 {
     position: absolute;
-    width: 50px;
-    height: 50px;
-    border: 2px solid #000;
+    width: 30px;
+    height: 30px;
+    border: 3px solid #000;
     box-sizing: border-box;
     transition: 0.1s;
     transform: translate(-50%,-50%);
@@ -170,42 +175,31 @@ body::-webkit-scrollbar {
     color: var(--text-primary);
     font-weight: 700;
 }
-.project-content
+#work
 {
-    height: 28rem;
-    margin-left: 2rem;
-    color: var(--text-primary);
+    height: 40rem;
+}
+#coding
+{
+    margin: 1rem;
+}
+.work-head
+{
+    text-align: center;
+    margin-top: 3rem;
+    margin-bottom: 4rem;
+}
+.work-head  span 
+{
+    font-weight: bolder;
     font-size: 1.5rem;
+    color: #000;
+    padding: 8px;
+    background-color: #12f382;
+    border: 2px solid #000 ;
+    border-radius: 10px;
+}
 
-}
-.project-list 
-{
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    height: 100%;
-    font-weight: 500;
-}
-.project-list li
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    font-weight: bold;
-}
-.srno
-{
-    text-decoration: underline;
-    opacity: 0.7;
-}
-.list-head
-{
-    color: rgb(255, 94, 0);
-}
 .contact-content 
 {
     color: var(--text-primary);
@@ -222,12 +216,12 @@ body::-webkit-scrollbar {
     flex-direction: row;
     justify-content: space-evenly;
 }
-.resume-link 
+.resume-link,.project-link,.open-source-link
 {
     text-decoration: none;
     text-align: center;
 }
-.resume-link #button
+.resume-link #button,.project-link #button,.open-source-link #button
 {
     font-weight: bold;
     text-decoration: none;
@@ -236,7 +230,13 @@ body::-webkit-scrollbar {
     padding: 1rem;
     background-color: #12F3E2;
     border-radius: 2rem;
+    border: 2px solid #000;
 }
+#big-box 
+{
+  margin: 4rem;
+}
+
 .buttons 
 {
     display: flex;
@@ -245,6 +245,8 @@ body::-webkit-scrollbar {
 }
 .footer 
 {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     margin-top:5.5rem;
     width: 100%;
     bottom: 0;
@@ -254,7 +256,7 @@ body::-webkit-scrollbar {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    color: var(--text-primary);
+    color: var(--text-primary);  
 }
 .footer span 
 {
@@ -269,6 +271,10 @@ body::-webkit-scrollbar {
 {
   fill: #12F3E2 ;
   stroke-width: 3;
+}
+#plogo
+{
+    fill:var(--bg-secondary)
 }
 svg
 {
@@ -299,13 +305,29 @@ svg
     width: 100%;
     justify-content: space-evenly;
 }
+.list-coding 
+{
+    height: 5rem;
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+}
 .box 
 {
    margin-top: 1rem;
    margin-bottom: 1rem;
    width: 15%;
    height: 100%;
-   border: 1px solid #000;
+   border: 2px solid #000;
+   border-radius: 30px;
+}
+.box-coding
+{
+   margin-top: 1rem;
+   margin-bottom: 1rem;
+   width: 27%;
+   height: 100%;
+   border: 2px solid #000;
    border-radius: 30px;
 }
 .circle 
@@ -317,36 +339,94 @@ svg
     flex-direction: column;
     justify-content: center;
 }
+.circle-coding 
+{
+    height: 100%;
+    width:33%;
+    float: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 .final 
 {
     margin-left: 20%;
     width: 70%;
     height: 65%;
     border-radius: 10rem;
+    border: 2px solid #000;
+}
+.final-coding 
+{
+    margin-left: 10%;
+    width: 48%;
+    height: 50%;
+    border-radius: 10rem;
+    border: 2px solid #000;
 }
 #f3
 {
-    background-color: #12F3E2;
+    background-color: #ff0009;
 }
 #f2
 {
-    background-color: rgb(255, 94, 0);
+    background-color: #ff0;
 }
 #f1 
 {
+
     background-color: rgb(139, 243, 78);
+}
+
+#f3-coding
+{
+    background-color: #ff0009;
+}
+#f2-coding
+{
+    background-color: #ff0;
+}
+#f1-coding 
+{
+
+    background-color: rgb(139, 243, 78);
+}
+
+.content-coding 
+{
+    height: 100%;
+    width: 65%;
+    float: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 0.80rem;
+    color: #000;
+    font-weight: bold;
+}
+#bold
+{
+  color: rgb(219, 165, 17);
+}
+
+.content-coding  a
+{
+    text-decoration: none;
+    color: #1eb87d;
 }
 .type span 
 {
     padding:5px;
-    background-color: rgb(243, 78, 216);
+    background-color: #12F3E2;
     border-radius: 20px;
+    border: 1.9px solid #000;
     color: #141418;
     font-size: 1.2rem;
 }
 .contact-link a 
 {
     text-decoration: none;
+    
 }
 .content 
 {
@@ -397,3 +477,111 @@ svg
 .solar #solarIcon {
     display: block;
 } 
+
+.project-heading
+{
+    color: var(--text-primary);
+    font-size: 1.6rem;
+    text-align: center;
+    font-weight: bolder;
+    margin: 1.5rem;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: var(--bg-secondary);
+    font-size: 3rem;
+    color: var(--text-primary);
+    box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem, rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
+    height: 150px;
+    width: 70%;
+    border-radius: 4px;
+    transition: all 500ms;
+    overflow: hidden;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+ }
+
+ .card 
+ {
+     display: flex;
+     flex-direction: row;
+ }
+ .pno 
+ {
+     flex:1;
+     color: var(--text-primary);
+     height: 80%;
+     font-size: 8rem;
+     text-align: center;
+     background-color: var(--bg-primary);
+     margin: 20px;
+     border-radius: 10px;
+     font-family: 'Iceland', cursive;
+ }
+ .pdes 
+ {
+     flex:3;
+     height: 100%;
+     text-align: center;
+     font-size: 1rem;
+     font-weight: bold;
+ }
+ .plink 
+ {
+     flex:1;
+     height: 80%;
+     font-size: 8rem;
+     text-align: center;
+     background-color: var(--bg-primary);
+     margin: 20px;
+     border-radius: 10px;
+     font-family: 'Iceland', cursive;
+     
+ }
+ .basic-flex 
+ {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+ }
+
+ .footer-new 
+{
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    width: 100%;
+    bottom: 0;
+    height: 3rem;
+    background-color: var(--bg-secondary);
+    margin-right: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    color: var(--text-primary);
+    margin-top: 1rem;
+}
+.footer-new span 
+{
+    padding-top: .75rem;
+}
+.footer-new a
+{
+   text-decoration: none;
+   color: rgb(255, 94, 0);
+}
+
+.error-open-source 
+{
+    background-color: var(--bg-secondary);
+    color: var(--text-primary);
+    font-size: 1.5rem;
+    padding: 40px;
+    min-height:430px;
+}
